# Todo-Full-Stack-Web-Application

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
backend/: CLAUDE.md  pyproject.toml  requirements.txt
backend/api/: index.py
backend/src/: config.py  main.py
backend/src/auth/: jwt.py  middleware.py  utils.py
backend/src/db/: session.py
backend/src/models/: task.py  user.py
backend/src/routes/: auth.py  tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_isolation.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth-client.ts
frontend/src/types/: index.ts
history/prompts/001-fullstack-todo-monorepo/: 002-full-stack-todo-monorepo-spec.spec.prompt.md  003-full-stack-todo-monorepo-plan.plan.prompt.md  004-full-stack-todo-monorepo-tasks.tasks.prompt.md  005-full-stack-todo-monorepo-setup.implement.prompt.md  006-full-stack-todo-monorepo-foundation.implement.prompt.md  007-full-stack-todo-monorepo-auth.implement.prompt.md  008-full-stack-todo-monorepo-tasks-crud.implement.prompt.md  009-full-stack-todo-monorepo-complete.implement.prompt.md  010-fix-backend-config-extra-fields.implement.prompt.md  011-fix-db-connection-scheme-asyncpg.implement.prompt.md  012-fix-asyncpg-sslmode-error.implement.prompt.md  013-fix-asyncpg-channel-binding-error.implement.prompt.md  (+1 more)
specs/001-fullstack-todo-monorepo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/database/: schema.md
specs/features/: auth.md
(+11 files in other folders)
